--- a/source_design/main.css
+++ b/source_design/main.css
@@ -101,6 +101,36 @@ section{
   .features a{
     font-weight: 600;
   }
+  .lowersection{
+    background-color: white;
+    padding-top: 2rem;
+    color: #2C4459;
+    padding-left: 2rem;
+    margin-left: 2rem;
+  }
+  .feature{
+    margin-bottom: 2rem;
+  }
+  .lowersection h1{
+    font-size: 46px;
+  }
+  .lowersection p{
+    color: #91A7B6;
+    max-width: 30%;
+  }
+  .lowersection .text-img-container{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    
+  }
+  .lowersection img{
+    max-width: 80%;
+  }
+  .lowersection .img-container {
+    padding-top: 4rem;
+    padding-bottom: 6rem;
+  }
 
   @media (max-width: 725px) {
     .navbar nav {
@@ -108,13 +138,12 @@ section{
         align-items: center;
         justify-content: flex-start;
       }
-      
-    
     .navbar ul {
       flex-direction: column;
       align-items: center;
       display: none;
       padding-right: 2rem;
+      padding-top: 2rem;
     }
     
     .navbar ul.active {
@@ -149,6 +178,9 @@ section{
     }
     .btn-fade{
         display: none;
+    }
+    .lowersection p{
+      max-width: 80%;
     }
   }
   
