--- a/restaurant/main.css
+++ b/restaurant/main.css
@@ -2,6 +2,7 @@
      /* colors */
      --orange: orange;
      --orange60: rgba(249, 180, 45, 0.6);
+     --orange90: rgba(249, 180, 45, 0.9);
      --black: black;
      --white: #ffffff;
      --light-white: aliceblue;
@@ -19,6 +20,7 @@
   }
   body {
     margin: 0;
+    overflow-x: hidden;
   }  
   i{
     color: var(--black);
@@ -58,30 +60,45 @@
     height: 60px;
   }
   
-.navbar{
+  .navbar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: var(--orange90);
+    font-size: 1.2rem;
+    z-index: 2;
+  }
+  .navbar nav ul{
     display: flex;
     justify-content: flex-end;
-    padding-right: 15rem;
-    background-color: var(--white90);
-    font-size: 1.2rem;
-}
-.navbar ul {
+    align-items: center;
+  }
+  
+  
+  .navbar nav ul {
     padding-top: 1rem;
-    display: flex;
     gap: 3rem;
-    list-style: none;
-    align-content: center;
-    justify-content: center;
-}
-.navbar ul li a{
+    list-style: none;    
+  }
+  .navbar ul li a{
     text-decoration: none;
     color: var(--black);
+  }
+  .bi{
+    padding-right: 2rem;
+  }
+.main {
+  background-image: url("pictures/background.jpg");
+  background-size: cover;
+  min-height: 100vh;
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start; /* Align items to the start (left) */
+  justify-content: center;
 }
-.main{
-    background-image: url("pictures/background.jpg");
-    background-size:cover;
-    height: 100vh;
-}
+
 .main::after {
   content: "";
   position: absolute;
@@ -90,12 +107,14 @@
   right: 0;
   height: 100px;
   background-image: linear-gradient(to bottom, var(--white0), var(--white));
+  z-index: 1;
 }
-.main h1{
-    font-size: 6rem;
-    max-width: 40%;
-    font-weight: 600;
+.main h1 {
+  font-size: 4rem;
+  max-width: 70%;
+  margin: 0;
 }
+
 .main-search{
     padding-top: 10%;
     padding-left: 10%;
@@ -106,7 +125,7 @@
 .input-group {
     display: flex;
     align-items: center;
-
+    padding-top: 2rem;
   }
   
   .input-group input,
@@ -123,15 +142,16 @@
   .input-group input::placeholder {
     color: var(--light-grey);
   }
-  .about-us{
+  .about-us {
     background-image: url("pictures/background2.png");
-    background-size:cover;
-    height: 100vh;
+    background-size: cover;
     display: flex;
     flex-flow: column wrap;
     align-items: center;
     justify-content: center;
-}
+    padding: 4rem;
+  }
+  
 
 
 .about-us-text{
@@ -161,7 +181,7 @@
 
 .slider {
 	background-color: var(--ash);
-	position: relative;
+	
 	width: 100%;
 	height: 100%;
 }
@@ -170,7 +190,7 @@
 	text-align: center;
 	background: var(--ash);
 	display: none;
-	position: relative;
+	
 	width: 100%;
 	height: 100%;
 }
@@ -332,4 +352,199 @@ padding-top: 4rem;
     justify-content: center;
     align-items: center;
 }
+
+
+@media (max-width: 1000px) {
+  .about-us {
+    background: none;
+  }
+  .about-us h2{
+    font-size: 2rem;
+  }
+  .about-us-text{
+    max-width: 100%;
+    width: 100%;
+    font-size: 1.25rem;
+  }
+  div.about-us-text{
+    padding: 0;
+  }
+}
+@media (max-width: 1150px) {
+  .testimonials h2{
+    font-size: 2rem;
+  }
+  .book h2{
+    font-size: 2rem;
+  }
+  .order h2{
+    font-size: 2rem;
+  }
+  .main .main-search h1{
+    font-size: 2rem;
+  }
+
+  .main-search {
+    padding-top: 5%;
+    padding-left: 5%;
+  }
+
+  .input-group input {
+    width: 100%;
+    max-width: 300px;
+    height: 40px;
+  }
+
+  .input-group button {
+    width: 120px;
+    height: 45px;
+  }
+
+  select {
+    width: 100%;
+    height: 43px;
+  }
+}
+
+@media(max-width:1600px){
+  .carousel-container{
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 0;
+    
+  }
+  .carousel-container img{
+    gap: 0;
+    width: 60%;
+    height: 60%;
+    padding-bottom: 10px;
+  }
+}
+
+@media (max-width: 960px) {
+  .navbar{
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    background-color: var(--white);
+    font-size: 1.35rem;
+  }
+  .navbar nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .navbar ul li {
+    display: none;
+    padding-right: 3rem;
+    padding-top: 0.25rem;
+  }
+
+  .navbar ul.active {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    gap: 0;
+  }
+  .navbar ul.active li {
+    display: block;
+  }
+
+  .navbar .icons {
+    display: none;
+  }
+  .navbar nav ul{
+    padding-top:  0;
+  }
+
+  .header-wrapper {
+    flex-grow: 1;
+    display: flex;
+    justify-content: center;
+  }
+
+  .hamburger {
+    display: block;
+    cursor: pointer;
+    order: -1;
+    padding-left: 2rem;
+  }
+
+  .hamburger span {
+    display: block;
+    width: 25px;
+    height: 3px;
+    margin-bottom: 5px;
+    background-color: var(--black);
+  }
+  .input-group {
+    padding-top: 1rem;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .input-group input {
+    width: 60%;
+    max-width: 100%;
+    height: 40px;
+    margin-bottom: 10px;
+  }
+
+  .input-group button {
+    width: 60%;
+    max-width: 100%;
+    height: 40px;
+  }
+
+  .input-group select {
+    width: 100%;
+    max-width: 100%;
+    height: 30px;
+  }
+  
+  .social--media {
+    gap: 1rem;
+  }
+  .navbar ul.active {
+    display: flex;
+  }
+  div .left-hours , div .right-hours{
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+  .main::after{
+    display: none;
+  }
+  div.main{
+    padding: 0;
+  }
+.book .hours{
+  gap: 0;
+}
+}
+@media (max-width: 540px) {
+  .navbar{
+    font-size: 1rem;
+  }
+  .navbar ul.active {
+    flex-direction: column;
+  }
+  .navbar ul li {
+    padding-right: 5rem;
+  }
+  .hours p:nth-of-type(2){
+    font-size: 1rem;
+  }
+  .book p{
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+  div .left-hours, div .right-hours{
+    padding: 0;
+  }
+}
+
+
 
