--- a/source_design/main.css
+++ b/source_design/main.css
@@ -143,10 +143,21 @@ section{
   }
   
   
-
-
+  @media (max-width: 960px) {
+    .features{
+      display: flex;
+      flex-direction: column;
+      padding-left: 2rem;
+    }
+    .features p{
+      max-width: 100%;
+    }
+  }
 
   @media (max-width: 725px) {
+    .navbar{
+      padding: 0;
+    }
     .navbar nav {
         display: flex;
         align-items: center;
@@ -184,12 +195,15 @@ section{
     
     .mainsection {
       grid-template-columns: 1fr;
+      max-width: 100%;
+      padding-left: 20px;
     }
     
     .features {
       grid-template-columns: 1fr;
       padding-left: 2rem;
     }
+
     .btn-fade{
         display: none;
     }
@@ -197,5 +211,3 @@ section{
       max-width: 80%;
     }
   }
-  
-  
