--- a/level-ground/main.css
+++ b/level-ground/main.css
@@ -78,7 +78,7 @@
   .fullscreen-bg .video-text h1{
     font-size: 100px;
     font-weight: 600;
-    
+    text-align: center;
   }
   .fullscreen-bg .video-text h3{
     font-size: 31px;
@@ -96,7 +96,7 @@
     padding-bottom: 10rem;
   }
   .why-section p{
-    width: 20%;
+    max-width: 50%;
   }
   .why-section h2{
     font-size: 42px;
@@ -106,22 +106,26 @@
     background-color: #DBDFE2;
     display: grid;
     grid-template-columns: 1fr 1fr;
+    gap: 1rem;
     align-items: center;
     justify-content: center;
     font-size: 1.25rem;
     padding-bottom: 10rem;
+    padding: 5rem 5rem 10rem 5rem;
   }
   .img-section p{
     padding-bottom: 2rem;
+    height: 250px;
   }
   
   .img-section div {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-evenly;
     max-width: 50%;
     margin: 0 auto;
+    align-self: start;
   }
   
   .img-section img {
@@ -147,7 +151,7 @@
     grid-template-columns: 1fr auto;
     justify-content: space-between;
     align-items: center;
-    padding: 0.5rem 2.5rem 3rem 2.5rem;
+    padding: 1.5rem 2.5rem 3rem 1.5rem;
   }
   .volunteer-section{
     display: flex;
@@ -159,7 +163,7 @@
     padding-bottom: 10rem;
   }
   .volunteer-section p{
-    width: 20%;
+    max-width: 50%;
     padding-bottom: 2rem;
   }
   .volunteer-section button{
@@ -212,7 +216,143 @@
     background-color: #161F2A;
     color: white;
   }
+@media(max-width: 1150px){
+  .img-section {
+    grid-template-columns: 1fr;
+}
+.img-section img{
+  padding: 0 2rem;
+}
+.fullscreen-bg .video-text h1{
+  font-size: 4rem;
+  max-width: 80%;
+  text-align: center;
+}
+.fullscreen-bg .video-text h3{
+  font-size: 1.5rem;
+}
 
+}
+
+
+@media (max-width: 768px) {
+  video {
+    object-position: -500px 0; /* Adjust the horizontal positioning as needed */
+  }
+  .fullscreen-bg {
+    height: auto;
+  }
+  .fullscreen-bg > div:nth-of-type(2) {
+    top: 50%;
+    transform: translateY(-50%);
+  }
+  .fullscreen-bg .video-text h1{
+    max-width: 60%;
+    font-size: 4rem; 
+  }
+  .video-text h3{
+    display: none;
+  }
+  
+  .why-section {
+    padding-top: 2rem;
+    padding-bottom: 5rem;
+  }
+  
+  .why-section h2 {
+    font-size: 32px;
+  }
+  
+  .img-section {
+    grid-template-columns: 1fr;
+    padding: 2rem;
+  }
+  
+  .img-section p {
+    height: auto;
+    max-width: 80%;
+  }
+  
+  .img-section div {
+    max-width: 100%;
+    margin: 2rem auto;
+  }
+  
+  .img-section img {
+    width: 100%;
+    aspect-ratio: unset;
+  }
+  
+  .img-section button {
+    width: 150px;
+  }
+  
+  .img-section h4 {
+    font-size: 24px;
+  }
+  
+  .volunteer-section {
+    padding: 2rem 5rem;
+    
+  }
+  
+  .volunteer-section p {
+    max-width: 100%;
+  }
+  
+  .volunteer-section button {
+    width: 150px;
+    padding: 1rem;
+  }
+  
+  .volunteer-section h2 {
+    font-size: 32px;
+  }
+}
+
+@media (max-width: 576px) {
+  .navbar nav ul {
+    flex-direction: column;
+  }
+  
+  .navbar nav ul li {
+    margin-top: 1rem;
+  }
+  
+  .navbar nav div {
+    flex-grow: unset;
+  }
+  
+  .logo {
+    width: 40px;
+    height: 40px;
+  }
+  
+  .donate-button {
+    margin-right: 1rem;
+    font-size: 0.8rem;
+    padding: 0.5rem;
+  }
+  
+
+  
+  footer ul {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  
+  footer ul li {
+    margin-top: 0.5rem;
+  }
+  
+  footer .white-line {
+    margin-top: 1rem;
+  }
+  .fullscreen-bg .video-text h1{
+    max-width: 60%;
+    font-size: 2rem; 
+  }
+}
 
 
   
