--- a/inject_brand/main.css
+++ b/inject_brand/main.css
@@ -7,10 +7,18 @@
     --navy: #161E2E;
     --light-grey: #A9ABB1;
 }
+*, ::before, ::after {
+    box-sizing: border-box;
+    font-family: 'Source Sans Pro', sans-serif;
+}
 
 body {
     margin: 0;
-    font-family: 'Source Sans Pro', sans-serif;
+}
+
+  
+.container div{
+    display: block;
 }
 
 .div1 {
@@ -23,19 +31,33 @@ body {
     overflow: hidden;
 }
 
-.div1 nav {
+
+
+.container .nav-container{
+    width: 100%;  
+    top: 0;
+    padding-top: 1.5rem;
+    width: 100%;
+
+}
+.container .div1 .nav-container nav{
     display: flex;
+    flex-direction: row;
+    align-items: center;
     justify-content: space-between;
+    gap: 0;
+   padding-left: 2rem;
 }
 
-.div1 ul {
+.container .div1 ul {
     display: flex;
     flex-direction: row;
     gap: 4rem;
     list-style: none;
+    max-width: 80%;
 }
 
-.div1 ul a {
+.container .div1 ul a {
     text-decoration: none;
     color: var(--grey);
     font-weight: 600;
@@ -45,12 +67,6 @@ body {
     color: var(--white);
 }
 
-.div1 .grouped-button {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 3rem;
-}
 
 .div1 button {
     border: none;
@@ -63,9 +79,7 @@ body {
     cursor: pointer;
 }
 
-.div1 .logo {
-    padding-left: 3rem;
-}
+
 
 .div1 h1 {
     font-weight: 300;
@@ -105,13 +119,15 @@ body {
     cursor: pointer;
 }
 
-.companies {
+.container .companies {
     display: flex;
     gap: 5rem;
     justify-content: end;
     padding-right: 5rem;
     margin-top: -50px;
     padding-left: 2rem;
+    padding-bottom: 4rem;
+    
 }
 
 .companies svg {
@@ -127,28 +143,18 @@ body {
     filter: none;
 }
 
-.tablet-container {
+.container .tablet-container {
     background-color: #f2f2f2;
-    /* Background color for the tablet */
-    width: 600px;
-    /* Adjust the width as per your requirements */
-    height: 400px;
-    /* Adjust the height as per your requirements */
+    width: 500px;
+    height: 350px;
     border-radius: 20px;
-    /* Rounded corners to give tablet-like shape */
-    overflow: hidden;
-    /* Ensure that the screen container stays within the tablet container */
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
-    /* Add a subtle shadow effect */
     position: absolute;
     z-index: 3;
     top: 50%;
-    /* Adjust the positioning as needed */
     left: 50%;
-    /* Adjust the positioning as needed */
-    transform: translate(-50%, -50%);
-    /* Adjust the positioning as needed */
-    padding: 25px 50px;
+    transform: translate(-50%, -40%);
+    padding: 25px 30px;
     margin-top: -250px;
     margin-left: 650px;
 }
@@ -165,41 +171,148 @@ body {
     max-width: 100%;
     max-height: 100%;
 }
+.how-help{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    font-size: 1.5rem;
+    padding-bottom: 4rem;
+    max-width: 80%;
+    margin: 0 auto;
+}
+.how-help-text{
+    max-width: 80%;
+}
 
+.how-help-img-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    gap: 4rem;
+    padding-right: 4rem;
+    max-width: 50%;
+}
+  img{
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+  }
+
+  .how-help-imgs figure {
+    font-size: 0px;
+    margin: 0;
+    padding: 0;
+    width: 245px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+  }
+  .how-help-imgs figure:hover{
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.13);
+  }
+  /* caption styling  */
+  figcaption {
+    background-color: var(--white);
+    color: var(--navy);
+    text-align: center;
+    padding: 0.5rem;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    width: 245px;
+    
+  }
+
+  figcaption h4{
+    font-size: 1rem;
+    font-weight: 600;
+  }
+  figcaption p{
+    font-size: 1rem;
+  }
+  .how-help button{
+    background-color: var(--navy);
+    color: var(--white);
+    font-weight: 600;
+    margin-top: 2rem;
+    padding: 1rem 3rem;
+    border: none;
+    border-radius: 5px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+  }
+  .who-we-are{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1rem;
+  }
+  .who-we-are div:first-of-type{
+    width: 100%;
+    padding: 0 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+   }
+   .who-we-are div:first-of-type img{
+    width: 100%;
+   }
+
+   .who-we-are div:nth-of-type(2){
+    padding-top: 1rem;
+    flex-direction: column;
+    width: 50%;
+   }
 @media (max-width: 2045px) {
-    .tablet-container {
+    .container .tablet-container {
         margin-left: 190px;
     }
 }
 
 @media (max-width: 1340px) {
-    .tablet-container {
+    .container .tablet-container {
         margin-left: 220px;
         width: 350px;
         height: 250px;
-        padding: 25px;
+        padding: 15px;
+        transform: translate(-40%, 20%);
+    }
+    div.div1{
+        height: 70vh;
+    }
+    .how-help{
+        grid-template-columns: 1fr;
+        
+    }
+    .how-help-img-container {
+        padding-top: 4rem;
+        gap: 2rem;
+        margin: 0 auto;
+    }
+    .how-help-text{
+        margin: 0 auto;
     }
 }
 
 @media (max-width: 992px) {
-    .div1 .header-container {
+
+    .container div.div1{
+        padding: 1rem;
+        text-align: center;
+    }
+    .container .div1 .header-container {
         padding-left: 4rem;
-        max-width: 60%;
+      
     }
-    .tablet-container {
-        display: none;
+    .container .tablet-container {
+       display: none;
     }
-    .div1 ul {
-        gap: 2rem;
-        /* Adjust the gap between items */
+    .container .div1 ul {
+        gap: 1rem;
+        
+        padding-left: 0;
+
     }
 
     .div1 ul a {
         font-size: 14px;
-        /* Adjust the font size */
+        
     }
 
-    /* Adjustments for mobile devices */
+    
     .div1 {
         padding: 2rem;
         text-align: center;
@@ -214,39 +327,110 @@ body {
     .div1 p {
         max-width: 100%;
     }
-}
-@media (max-width: 775px){
-    .companies{
-        display: none;
+    .who-we-are{
+        grid-template-columns: 1fr;
+        justify-content: center;
+      }
+    .who-we-are div:nth-of-type(2){
+        align-items: center;
+        width: 80%;
+        margin: 0 auto;
     }
 }
 @media (max-width: 862px) {
-    .div1 {
-      display: grid;
-      grid-template-columns: 1fr 1fr; /* Create a grid with two equal columns */
-      align-items: center; /* Center the content vertically */
-      justify-content: center; /* Center the content horizontally */
+    .container div.header-container{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
     }
-    .header-container {
-      grid-column: 1 / span 2; /* Span the entire grid */
-      text-align: center; /* Center the content within the grid cell */
-      margin-bottom: 20px; /* Add some margin to create spacing */
-      position: relative; /* Enable positioning */
-      z-index: 2; /* Adjust the z-index to ensure the header text is visible */
-      max-height: 100vh;
-      margin-top: -200px;
+
+    .container .companies{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 1rem;
+        align-items: center;
+        justify-content: center;
+        margin-top: -5rem;
+        padding-left: 5rem;
+        margin-left: 5rem;
     }
+    .div1 button {
+        margin-left: 0.5rem;
+        padding: 0.5rem 1rem;
+        font-size: 12px;
+    }
+    
+
   
     .header-text, .header-buttons {
-      width: 100%; /* Make the divs take up the full width of the container */
+      width: 100%; 
+      text-align: center;
     }
   
     .header-text h1 {
-      font-size: 14px; /* Adjust the font size as needed */
+      font-size: 1.25rem; 
     }
     .header-text p {
-        font-size: 14px; /* Adjust the font size as needed */
+        font-size: 14px;
         max-width: 80%;
       }
   }
+  @media(max-width: 541px) {
+    .how-help{
+        grid-template-columns: 1fr;
+        
+    }
+
+    .how-help-img-container {
+        padding-top: 4rem;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr;
+        padding-right: 0;
+        gap: 2rem;
+    }
+    div.div1{
+        height: 130vh;
+    }
+    .container .div1 .header-container {
+        padding-left: 0.25rem;
+    }
+    .container .div1 .nav-container nav{
+        justify-content: space-between;
+       max-width: 90%;
+    }
+    .container .div1 .nav-container nav ul{
+        display: none;
+    }
+    .navbar ul {
+        flex-direction: column;
+        align-items: center;
+        display: none;
+        padding-right: 2rem;
+        padding-top: 2rem;
+      }
+      
+      .navbar ul.active {
+          display: flex;
+        }
+    .hamburger {
+        display: block;
+        cursor: pointer;
+        order: 3;
+       
+        padding-top: 0.5rem;
+      }
+    
+      .hamburger span {
+        display: block;
+        width: 25px;
+        height: 3px;
+        margin-bottom: 5px;
+        background-color: var(--white);
+      }
+   .btn-fade{
+    display: none;
+    }
+  }
+
   
